chamber/styles/discover.css
:root {
  --text-color: #000000;
  --primary-color: #4b4d39;
  --secondary-color: #4c583e;
  --accent1-color: #2c3424;
  --accent2-color: #daded8;
  --accent3-color: #768064;
  --heading-font: "Raleway", serif;
  --text-font: "Inter", serif;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font);
}
.discover {
  max-width: 1200px;
  margin: 50px auto;
}
.discover-grid {
  display: grid;
  gap: 1rem;
  margin-top: 1rem;
}
.discover-card {
  padding: 1rem;
  border-radius: 8px;
  background: #fff;
  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease;
}
.discover-card h2 {
  background-color: var(--accent1-color);
  color: #fff;
  padding: 1rem;
  margin: -1rem -1rem 1rem -1rem;
  font-size: 1.2rem;
}
.discover-card img {
  width: 100%;
  /* height: auto; */
  border-radius: 5px;
  margin: 10px 0;
}
button {
  padding: 0.5rem 1rem;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  outline: none;
  border: none;
  background: var(--accent1-color);
  color: #fff;
  margin: 10px 0;
}
.visitor-message {
  background: #f3f3f3;
  padding: 0.5rem;
  border-left: 4px solid var(--accent1-color);
  margin: 1rem 0;
}

@media (max-width: 640px) {
  .discover-grid {
    grid-template-areas:
      "card1"
      "card2"
      "card3"
      "card4"
      "card5"
      "card6"
      "card7"
      "card8";
  }
}

@media (min-width: 641px) and (max-width: 1024px) {
  .discover-grid {
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
      "card1 card2"
      "card3 card4"
      "card5 card6"
      "card7 card8";
  }
}

@media (min-width: 1025px) {
  .discover-grid {
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas:
      "card1 card2 card3 card4"
      "card5 card6 card7 card8";
  }
}

@media (min-width: 641px) {
  .discover-card:hover img {
    filter: brightness(90%) contrast(110%);
    transform: scale(1.05);
    transition: 0.3s ease;
  }
}

